src/tests/typing/fail/dupe_shared_var.tj
module main(b) = (b)
    shared b = ()
    n:
        b = 0
    until